# lead-crawler

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  REFACTORING.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-min.txt  requirements-test.txt  requirements.txt  test_export.py
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
config/: settings.example.py
data/: import_plz.py  zipcodes.at.csv
docs/: AI_DEVELOPMENT_GUIDELINES.html  AI_DEVELOPMENT_GUIDELINES.md  DEVELOPER_GUIDELINES.html  DEVELOPER_GUIDELINES.md
legacy/: README.md  analysis_cache.py  enhanced_scoring.py  llm_pipeline.py  scoring.py  scraper.py  website_crawler.py
src/: __init__.py  csv_export.py  ecoplus_spider.py  enhanced_scraper.py  llm_analyzer.py  plz_radius.py  scoring.py  scraper.py
src/api/: __init__.py  dependencies.py  main.py  schemas.py
src/api/routes/: __init__.py  analyze.py  company.py  export.py  search.py
src/lead_crawler/: __init__.py  config.py
src/lead_crawler/crawlers/: __init__.py  base.py  spider.py  wko.py
src/lead_crawler/models/: __init__.py  analysis.py  company.py  plz.py  scoring.py
src/lead_crawler/pipelines/: __init__.py  export.py  lead_analysis.py
src/lead_crawler/runners/: __init__.py  spider_runner.py
src/lead_crawler/services/: __init__.py  cache.py  llm_client.py  plz_service.py  website_extractor.py
src/web/: Home.py  __init__.py  app_legacy.py
src/web/components/: __init__.py  ui.py
src/web/pages/: 1_Search.py  2_Analysis.py  3_Export.py  4_Settings.py
tests/: TESTING.md
tests/fixtures/: __init__.py  sample_data.py
tests/integration/: __init__.py  test_crawlers.py  test_llm_client.py  test_pipelines.py
tests/unit/: test_api.py  test_config.py  test_crawlers.py  test_models.py  test_pipelines.py  test_services.py  test_web.py
web/: app.py
web/components/: __init__.py  ui.py
web/pages/: 1_Search.py  2_Analysis.py  4_Settings.py
